# MatModelFromUmat

./: CMakeLists.txt
FortranUtils/: CMakeLists.txt  stdb_abqerr.for
MaterialModels/: CMakeLists.txt  MaterialModel.h  MaterialModelInitializer.cpp  MaterialModelInitializer.h  MaterialModels_pcp.cpp  MaterialModels_pcp.h  SandHypoplasticityByUmat.cpp  SandHypoplasticityByUmat.h  SandHypoplasticityCavitationByUmat.cpp  SandHypoplasticityCavitationByUmat.h
SandHypoplasticity/: CMakeLists.txt  sand_hypoplasticity_integration.f90  sand_hypoplasticity_integration_dir.f90  umat_hypoplasticity.f90  umat_hypoplasticity.f90.bak  umat_hypoplasticity.f90.bak2  umat_hypoplasticity.for  umat_hypoplasticity.for.bak  umat_hypoplasticity.for.bak2  umat_hypoplasticity.for_ori.bak3
SandHypoplasticityCavitation/: CMakeLists.txt  sand_hypoplasticity_cavitation_integration.f90  umat_hypoplasticity_cavitation.for
Tests/: CMakeLists.txt  Tests_main.cpp  Tests_main.h  test_input_from_MPM.cpp  test_sand_hypoplasticity.cpp
TestsF90/: CMakeLists.txt  main.f90
